# esg-selective-mineru-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-mineru.txt
configs/: .env.example
configs/schema/: a_share_v5.py
docs/: schema_60_explainer.md  technical_document_draft.md
frontend/: esg-miner-draft.html
frontend-react/: package-lock.json  package.json  vite.config.js
frontend-react/src/: App.css  App.tsx
frontend-vue/: index.html  package-lock.json  package.json  vite.config.ts
frontend-vue/src/: App.vue  style.css
src/esg_selective_mineru/: api.py  chunks.py  config.py  extractor.py  job_store.py  llm_client.py  mineru_runner.py  pipeline.py  quality.py  retriever.py  schema_loader.py
tests/: test_chunks.py  test_mineru_runner.py  test_report_filter.py  test_year_alignment.py
