[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "esg-selective-mineru-agent"
version = "0.1.0"
description = "Selective ESG report parsing with PyMuPDF triage, MinerU page targeting, and RAG-ready artifacts."
requires-python = ">=3.11"
dependencies = [
  "pymupdf>=1.24.0",
  "python-dotenv>=1.0.0",
  "openai>=1.40.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

